--- a/index.html
+++ b/index.html
@@ -255,7 +255,10 @@
                     </div>
                     <div class="pix-info">
                         <div class="pix-name">GEDIAEL TRAJANO DA SILVA</div>
-                        <div>📱 91 98185-9234</div>
+                        <div>📱 <span id="pix-numero">91 98185-9234</span>
+                            <button id="copiar-pix" style="margin-left:8px; padding:2px 8px; border-radius:5px; border:none; background:#25d366; color:white; cursor:pointer; font-size:0.95em;">Copiar</button>
+                            <span id="copiado-msg" style="display:none; color:#2d5a2d; margin-left:6px; font-size:0.95em;">Copiado!</span>
+                        </div>
                         <div>🏦 NUBANK</div>
                     </div>
                 </div>
@@ -460,4 +463,14 @@
         </div>
     </div>
 </body>
+<script>
+    document.getElementById('copiar-pix').onclick = function() {
+        const texto = document.getElementById('pix-numero').innerText;
+        navigator.clipboard.writeText(texto).then(function() {
+            const msg = document.getElementById('copiado-msg');
+            msg.style.display = 'inline';
+            setTimeout(() => { msg.style.display = 'none'; }, 1500);
+        });
+    };
+</script>
 </html> 
