adcionado conexao ao whatsapp

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         </div>
 
         <div class="contact-info">
-            <div>📱 Pedidos pelo WhatsApp: <span class="whatsapp">98147-6506</span></div>
+            <div>📱 Pedidos pelo WhatsApp: <a href="https://wa.me/5591981476506" class="whatsapp" target="_blank" style="text-decoration:none; color:#25d366; font-weight:bold;">98147-6506</a></div>
         </div>
 
         <div class="main-content">
