--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Hamburgão do Gedi - Cardápio</title>
     <style>
         :root {
-            --cor-forte: #f07c22;
-            --cor-fraca: #ea2c1e;
+            --cor-forte: #ea2c1e;
+            --cor-fraca: #f07c22;
         }
         
         * {
