novo ajuste de cor

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hamburgão do Gedi - Cardápio</title>
     <style>
         :root {
-            --cor-forte: #ea2c1e;
+            --cor-forte: #ef5723;
             --cor-fraca: #f07c22;
         }
         
